# kabardian-poetry-collection

./: README.md  manage.py  requirements.txt
about/: urls.py
kabardian-poetry-project/: Procfile  README.md  db.sqlite3  manage.py  pyproject.toml
kabardian-poetry-project/about/: views.py
kabardian-poetry-project/about/migrations/: 0001_initial.py
kabardian-poetry-project/about/templates/about/: about.html
kabardian-poetry-project/kabardian_poetry/: asgi.py  settings.py  urls.py  wsgi.py
kabardian-poetry-project/kabardian_poetry_api/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
kabardian-poetry-project/kabardian_poetry_api/migrations/: 0001_initial.py  0002_remove_word_audio_url.py  0003_remove_poem_audio_url.py  0004_word_type.py  0005_vocabulary_type.py  0006_rename_kab_transl_word_rus_transl.py  0007_alter_poem_vocabulary.py  0008_delete_vocabulary.py  0009_rename_vocabulary_poem_words.py  0010_remove_poem_words_poem_words.py  0011_rename_name_poem_title_alter_poem_words.py
kabardian-poetry-project/poems/: models.py  urls.py  views.py
kabardian-poetry-project/poems/templates/poems/: index.html  poem_detail.html  poem_list.html
kabardian-poetry-project/static/css/: style.css
kabardian-poetry-project/templates/: base.html
kabardian-poetry-project/vocabulary/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
kabardian-poetry-project/vocabulary/migrations/: 0001_initial.py
kabardian-poetry-project/vocabulary/templates/vocabulary/: vocabulary.html
kabardian_poetry/: settings.py  urls.py
(+28 files in other folders)
