[tool.poetry]
name = "kabardian-poetry-project"
version = "0.1.0"
description = ""
authors = ["kkumyk <k.a.kumyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
psycopg2 = "^2.9.9"
dj-database-url = "^2.1.0"
django-allauth = "^0.63.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
